# PDE4445-LLM-Nav2-Planner

./: .env.example  .gitignore  README.md  requirements.txt
dataset/: commands.json
docs/: warehouse-run-trajectory.json  warehouse-run.html
map/: warehouse_map.json
prompts/: system_prompt_v1.md  system_prompt_v2.md
results/: 20260702_105331_openai_gpt-4o-mini.jsonl  20260704_112658_openai_gpt-4o-mini.jsonl  20260704_142555_openai_gpt-4o-mini_v2.jsonl  20260704_142810_openai_gpt-4o-mini_v2.jsonl
ros2_ws/: README.md
ros2_ws/src/nl_nav2_executor/: package.xml  setup.cfg  setup.py
ros2_ws/src/nl_nav2_executor/launch/: warehouse_sim.launch.py
ros2_ws/src/nl_nav2_executor/maps/: warehouse.pgm  warehouse.yaml
ros2_ws/src/nl_nav2_executor/nl_nav2_executor/: executor_node.py  mock_navigator.py  plan_runner.py  semantic_map.py
ros2_ws/src/nl_nav2_executor/params/: nav2_params.yaml
ros2_ws/src/nl_nav2_executor/scripts/: dry_run.py  gen_warehouse_assets.py
ros2_ws/src/nl_nav2_executor/test/: test_plan_runner.py
ros2_ws/src/nl_nav2_executor/worlds/: warehouse.world
schema/: waypoint_plan.schema.json
src/: planner.py  run_eval.py  run_pipeline.py  validate.py
