<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nl_nav2_executor</name>
  <version>0.1.0</version>
  <description>
    Executes an LLM-generated natural-language waypoint plan on ROS2 Nav2:
    resolves named warehouse locations to map poses and drives a TurtleBot3
    through them in a Gazebo warehouse, honouring per-step on_blocked
    contingencies (abort / skip / reroute_perimeter / wait_retry).
    Execution half of the PDE4445 dissertation pipeline.
  </description>
  <maintainer email="williamkoju@gmail.com">William</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
